--- a/app.html
+++ b/app.html
@@ -72,7 +72,7 @@
 
     <header class="bg-black/30 backdrop-blur-lg border-b border-white/10 z-20">
         <div class="container mx-auto px-6 py-3 flex justify-between items-center">
-            <a href="#" class="font-logo text-3xl font-black text-glow-pink">LexiFy</a>
+            <a href="index.html" class="font-logo text-3xl font-black text-glow-pink">LexiFy</a>
             <p class="font-punchline text-lg text-gray-400">Demystifying Legal Documents</p>
         </div>
     </header>
