--- a/app.html
+++ b/app.html
@@ -118,7 +118,7 @@
 
     <script>
         // --- CONFIGURATION ---
-        const GEMINI_API_KEY = "AIzaSyB6FtqwAtu4e_DduQACQoRnKcTgw1jXtYo"; // API Key has been added here
+        const GEMINI_API_KEY = "AIzaSyBGXwMRs6CP3VUzEkrp3FIlLjMshsPHPvo"; // API Key has been updated here
 
         // --- DOM Element Selectors ---
         const uploadArea = document.getElementById('upload-area');
