--- a/index.html
+++ b/index.html
@@ -106,38 +106,18 @@
         <section id="features" class="py-20 px-6">
             <div class="container mx-auto">
                 <h2 class="font-logo text-5xl font-black text-center mb-12 text-glow-pink">Core Capabilities</h2>
-                <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8">
+                <div class="grid md:grid-cols-3 gap-8 max-w-5xl mx-auto">
                     <div class="crystal-card p-8 rounded-xl text-center">
-                        <h3 class="text-2xl font-bold mb-4 text-glow-pink">Smart Dashboard</h3>
-                        <p>Visually extracts key dates, financials, and participants so you see what matters, instantly.</p>
+                        <h3 class="text-2xl font-bold mb-4 text-glow-pink">Document Upload</h3>
+                        <p>Easily upload your PDF or TXT legal documents to begin the analysis process.</p>
                     </div>
                     <div class="crystal-card p-8 rounded-xl text-center">
-                        <h3 class="text-2xl font-bold mb-4 text-glow-pink">AI-Powered Analysis</h3>
-                        <p>Get a crystal-clear summary, a breakdown of obligations, and a list of potential risks in seconds.</p>
+                        <h3 class="text-2xl font-bold mb-4 text-glow-pink">Core AI Analysis</h3>
+                        <p>Our AI reviews your document to identify risks, summarize key points, and provide a simple risk score.</p>
                     </div>
                     <div class="crystal-card p-8 rounded-xl text-center">
-                        <h3 class="text-2xl font-bold mb-4 text-glow-pink">Negotiation Simulator</h3>
-                        <p>Redraft unfavorable clauses with AI suggestions to strengthen your position before you sign.</p>
-                    </div>
-                    <div class="crystal-card p-8 rounded-xl text-center">
-                        <h3 class="text-2xl font-bold mb-4 text-glow-pink">Comparative "Redline"</h3>
-                        <p>Upload two versions of a document and instantly see a summary of all material changes.</p>
-                    </div>
-                    <div class="crystal-card p-8 rounded-xl text-center">
-                        <h3 class="text-2xl font-bold mb-4 text-glow-pink">E-Signature</h3>
-                        <p>Complete the workflow by signing your document directly in the app once you're satisfied.</p>
-                    </div>
-                    <div class="crystal-card p-8 rounded-xl text-center">
-                        <h3 class="text-2xl font-bold mb-4 text-glow-pink">AI Contract Drafting</h3>
-                        <p>Generate new legal contracts from scratch based on your needs. Just describe the agreement, and our AI will draft a starting point for you.</p>
-                    </div>
-                    <div class="crystal-card p-8 rounded-xl text-center">
-                        <h3 class="text-2xl font-bold mb-4 text-glow-pink">Language Translator</h3>
-                        <p>Translate legal documents from other languages into English for seamless analysis.</p>
-                    </div>
-                    <div class="crystal-card p-8 rounded-xl text-center">
-                        <h3 class="text-2xl font-bold mb-4 text-glow-pink">Vigilance Meter</h3>
-                        <p>Receive an AI-generated score from 1-10 indicating the overall risk level of the document.</p>
+                        <h3 class="text-2xl font-bold mb-4 text-glow-pink">Results Visualization</h3>
+                        <p>View the analysis in a clean, easy-to-read report with our Vigilance Meter and clear summaries.</p>
                     </div>
                 </div>
             </div>
@@ -222,7 +202,7 @@
         // --- FAQs ---
         const faqs = [
             { q: "Is this a replacement for a lawyer?", a: "No. LexiFy is a powerful AI tool for understanding and should not be considered legal advice. We always recommend consulting a qualified legal professional for critical matters." },
-            { q: "What file formats can I upload?", a: "You can upload PDF, TXT, JPG, and PNG files. The app is optimized for text-based documents and images with clear text for the highest accuracy." },
+            { q: "What file formats can I upload?", a: "You can upload PDF and TXT files for analysis in our prototype version." },
             { q: "How secure is my data?", a: "Security is our top priority. Your documents are transmitted over SSL, processed in memory, and are never stored on our servers after the analysis is complete." },
             { q: "Can I use this for any type of document?", a: "While it's optimized for legal documents like contracts and leases, you can upload any text-based document for summarization and analysis. The risk analysis features work best on legal text." },
             { q: "Do you offer plans for teams or businesses?", a: "We are currently focused on providing the best possible tool for individuals. Team and enterprise plans with collaborative features are on our roadmap for the future!" }
